# gigachat-adapter

./: .dockerignore  .env.example  .gitignore  .pr_agent.toml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.dist.yaml  pyproject.toml
.github/workflows/: pr.yml  pr_agent.yml  release.yml  shippie-review.yml
src/: endpoints.py  gigachat_monkey_patch.py  gigachat_service.py  main.py  models.py
src/core/: gigachat_monkey_patch.py  kv_store.py  logging.py  settings.py  verify_token.py
src/models/: common.py  completion.py  files.py  health.py
tests/: conftest.py  test_health.py  test_main.py
