[project]
name = "gigachat-adapter"
version = "0.3.0"
description = "GigaChat adapter for FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "gigachat>=0.1.36",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.4",
]

[tool.semantic_release]
version_variables = [
    "pyproject.toml:version",
]
commit_parser = "angular"
major_on_zero = false
branch = "main"
upload_to_pypi = false
upload_to_release = true
